2009-04-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl (set_type/2, set_show/2): Instead of
	just checking if the argument is valid, use the 'case' to convert the
	arguemnt to binary() too.

2009-04-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_presence.erl: Add contracts. Fix documentation.
	(set_type/2, set_show/2): Support binary() and string() correctly.

	* src/core/exmpp_stringprep.erl: Add contracts.

2009-04-04  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_session.erl: Better handling of stream error:
	Client now gets a proper exception.

2009-04-02  Christophe Romain  <christophe.romain@process-one.net>

	* src/client/exmpp_client_pubsub.erl: Pubsub delete node is now in
	pubsub#owner namespace.

2009-04-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/network/exmpp_session.erl, src/client/exmpp_client_register.erl:
	Use is_pid/1, is_atom/1, is_list/1, is_tuple/1 and is_integer/1
	instead of pid/1, atom/1, list/1, tuple/1 and integer/1 respectively.
	The latter are marked obsolete in R13B.

2009-03-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/Makefile.am: Install internal headers, for
	information purpose.

	* include/exmpp_xml.hrl: Declare a real type for each record. This
	permits to reference them in modules that do not include this header.

	* src/core/exmpp_xml.erl: Types documentation is moved near the top of
	the file, like other source files. Declare a real type for records
	that may be used by other modules. Fix xmlparseroption() type
	definition. Use types instead of record in contract. Fix many
	contracts; add a command where contracts couldn't be fixed because of
	Dialyzer limitations. Now that R12B is required, use lists:keystore/4
	instead of the replacement function in exmpp_utils.

	* src/core/exmpp_utils.erl (keystore/4): Remove this replacement
	function now that R12B is required.
