@@ -4,6 +4,12 @@
 	just checking if the argument is valid, use the 'case' to convert the
 	arguemnt to binary() too.
 
+	* src/core/exmpp_message.erl: Add contracts.
+	(set_type/2): Support binary() and string() correctly.
+	(set_subject/2, set_body/2, set_thread/2): Treat the empty_binary()
+	before the empty string() because now, binary() is the primary data
+	type in exmpp.
+
 2009-04-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_presence.erl: Add contracts. Fix documentation.
